[gd_scene load_steps=3 format=2]

[ext_resource path="res://Prefabs/Buttons.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/CanvasLayer.gd" type="Script" id=2]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_right = 844.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 848.0
margin_right = 920.0
margin_bottom = 600.0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 72.0
margin_bottom = 222.0
size_flags_vertical = 3

[node name="Head" parent="HBoxContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 226.0
margin_right = 72.0
margin_bottom = 246.0
buttonName = "Head"

[node name="Body" parent="HBoxContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 250.0
margin_right = 72.0
margin_bottom = 270.0
buttonName = "Body"

[node name="Legs" parent="HBoxContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 274.0
margin_right = 72.0
margin_bottom = 294.0
buttonName = "Legs"

[node name="ToggleRun" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 298.0
margin_right = 72.0
margin_bottom = 322.0

[node name="CheckRun" type="CheckBox" parent="HBoxContainer/VBoxContainer/ToggleRun"]
margin_right = 24.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/ToggleRun"]
margin_left = 28.0
margin_top = 5.0
margin_right = 52.0
margin_bottom = 19.0
text = "Run"

[node name="ToggleChild" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 326.0
margin_right = 72.0
margin_bottom = 350.0

[node name="CheckChild" type="CheckBox" parent="HBoxContainer/VBoxContainer/ToggleChild"]
margin_right = 24.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/ToggleChild"]
margin_left = 28.0
margin_top = 5.0
margin_right = 60.0
margin_bottom = 19.0
text = "Child"

[node name="Save" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 354.0
margin_right = 72.0
margin_bottom = 374.0
text = "Save"

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 378.0
margin_right = 72.0
margin_bottom = 600.0
size_flags_vertical = 3

[node name="RightPadding" type="MarginContainer" parent="HBoxContainer"]
margin_left = 924.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 100, 0 )
[connection signal="change" from="HBoxContainer/VBoxContainer/Head" to="." method="_on_Head_change"]
[connection signal="change" from="HBoxContainer/VBoxContainer/Body" to="." method="_on_Body_change"]
[connection signal="change" from="HBoxContainer/VBoxContainer/Legs" to="." method="_on_Legs_change"]
[connection signal="toggled" from="HBoxContainer/VBoxContainer/ToggleRun/CheckRun" to="." method="_on_CheckRun_toggled"]
[connection signal="toggled" from="HBoxContainer/VBoxContainer/ToggleChild/CheckChild" to="." method="_on_CheckChild_toggled"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Save" to="." method="_on_Save_pressed"]
